# joint_velocity_controller

./: CMakeLists.txt  README.md  package.xml
data/: velocities.csv
launch/: velocity_controller.launch
robot/: panda.urdf.xacro  panda.xacro
scripts/: gazebo.py  joint_velocity_controller.py  jvc.py  plot_util.py
scripts/physical/: jvc.py
scripts/sim/data/: velocities.csv
src/: joint_velocity_controller.cpp  qp_solver.cpp
